<resources>
    <string name="app_name">Gesti.Pedi</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Title">Gesti.Pedi</string>
    <string name="stock_text">Stock</string>
    <string name="informes_text">Informes</string>
    <string name="pedidos_text">Pedidos</string>
    <string name="clientes_text">Clientes</string>
    <string name="logo">Logo</string>
    <string name="imgstock">imgstock</string>
    <string name="imgclientes">imgClientes</string>
    <string name="imginformes">imgInformes</string>
    <string name="imgpedidos">imgPedidos</string>
    <string name="a_adir_cliente">Añadir Cliente</string>
    <string name="clientes">Clientes</string>
    <string name="email">Email:</string>
    <string name="nombre">Nombre:</string>
    <string name="dni">DNI:</string>
    <string name="a_adir_clientes">Añadir Clientes</string>
    <string name="editar_cliente">Editar Cliente</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="editar_producto">Editar Producto</string>
    <string name="nameProdE">Nombre:</string>
    <string name="descripci_n">Descripción</string>
    <string name="categoryProdE">Categoria:</string>
    <string name="priceProdE">Precio:</string>
    <string name="Price">Precio:</string>
    <string name="Cateogory">Categoria:</string>
    <string name="description">Descripción:</string>
    <string name="descripcin">Descripción:</string>
    <string name="categoria">Categoria:</string>
    <string name="stock">Stock:</string>
    <string name="precio">Precio:</string>
    <string name="cancelarA">Cancelar</string>
    <string name="apellidosA">Apellidos:</string>
    <string name="empresaA">Empresa:</string>
    <string name="cpA">CP:</string>
    <string name="direcci_nA">Dirección:</string>
    <string name="ciudadA">Ciudad:</string>
    <string name="pa_sA">País:</string>
    <string name="telefonoA">Telefono:</string>
    <string name="a_adirA">Añadir</string>
    <string name="cancelarE">Cancelar</string>
    <string name="apellidos">Apellidos:</string>
    <string name="empresa">Empresa:</string>
    <string name="cp">CP:</string>
    <string name="direcci_n">Dirección:</string>
    <string name="ciudad">Ciudad:</string>
    <string name="pa_s">País:</string>
    <string name="telefono">Telefono:</string>
    <string name="guardar">Guardar</string>
    <string name="imageproduct">imageProduct</string>
    <string name="seleccionar_imagen">Seleccionar Imagen</string>
    <string name="a_adir">Añadir</string>
    <string name="cancelar">Cancelar</string>
    <string name="seleccionar_imagenA">Seleccionar Imagen</string>
    <string name="descripci_nA">Descripción:</string>
    <string name="categoriaA">Categoria:</string>
    <string name="stockA">Stock:</string>
    <string name="precioA">Precio:</string>
    <string name="detalles_cliente">Detalles Cliente</string>
    <string name="eliminar">Eliminar</string>
    <string name="iniciar_sesi_n1">Iniciar Sesión</string>
    <string name="usuario">Usuario:</string>
    <string name="contrase_a">Contraseña:</string>
    <string name="detalles_producto">Detalles Producto</string>
    <string name="registrarse1">Registrarse</string>
    <string name="a_adir_producto">Añadir Producto</string>
    <string name="productos">Productos</string>
    <string name="buscar">Buscar</string>
    <string name="buscar_por_nombre">Buscar por Nombre</string>
    <string name="buscar_por_nombre2">Buscar por Nombre</string>
    <string name="pedidos">Pedidos</string>
    <string name="crear_pedido">Crear Pedido</string>
    <string name="carrito">Carrito</string>
    <string name="a_adir_producto2">Añadir Producto</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="confirmar_pedido">Confirmar Pedido</string>
    <string name="users">Users</string>
    <string name="categorias">Categorias</string>
    <string name="a_adir_categoria">Añadir Categoria</string>

    <string name="nombreCatA">Nombre:</string>
    <string name="detalle_categoria">Detalle Categoria</string>
    <string name="nameCatD">Nombre:</string>
    <string name="edit_category">Editar Categoria</string>
    <string name="NameCatE">Nombre:</string>
    <string name="editCategoryE">Editar Categoria</string>
    <string name="registrar_administrador">Registrar Administrador</string>
    <string name="increase">increase</string>
    <string name="decrease">decrease</string>


    <string-array name="labels_array">
        <item>Perros</item>
        <item>Gatos</item>
        <item>Peces</item>
    </string-array>

    <string-array name="labels_array_search">
        <item>All</item>
        <item>Perros</item>
        <item>Gatos</item>
        <item>Peces</item>
    </string-array>
</resources>