<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.anjovaca.gestipedi.Main.MainActivity">

    <item
        android:id="@+id/Category"
        android:orderInCategory="50"
        android:title="@string/Cateogory"
        android:icon="@drawable/category"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/ShoppingCart"
        android:orderInCategory="100"
        android:title="@string/shopping_cart"
        android:icon="@drawable/shopping_cart_icon"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/Users"
        android:orderInCategory="150"
        android:title="@string/users"
        android:icon="@drawable/add_administrator"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/initSession"
        android:orderInCategory="200"
        android:title="@string/iniciar_sesi_n"
        android:icon="@drawable/init_session_icon"
        app:showAsAction="ifRoom" />
</menu>