<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment"
    android:background="#2B2B2B">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/title_border"
        android:gravity="center|center_vertical"
        android:text="@string/Title"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnClientes"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/buttons_border"
        android:gravity="bottom|center"
        android:onClick="launchClientes"
        android:paddingBottom="50dp"
        android:text="@string/clientes_text"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInformes"
        app:layout_constraintVertical_bias="0.513"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/btnPedidos"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:background="@drawable/buttons_border"
        android:text="@string/pedidos_text"
        android:gravity="bottom|center"
        android:paddingBottom="50dp"
        android:layout_marginBottom="8dp"
        android:textColor="#FFFFFF"
        android:onClick="launchPedidos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInformes"
        app:layout_constraintVertical_bias="0.513"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/btnInformes"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/buttons_border"
        android:text="@string/informes_text"
        android:gravity="bottom|center"
        android:paddingBottom="50dp"
        android:textColor="#FFFFFF"
        android:onClick="launchInformes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/btnStock"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/buttons_border"
        android:text="@string/stock_text"
        android:gravity="bottom|center"
        android:paddingBottom="50dp"
        android:textColor="#FFFFFF"
        android:onClick="launchStock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnInformes"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.419"
        tools:ignore="OnClick" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="107dp"
        android:layout_height="101dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logotipo"
        app:layout_constraintBottom_toBottomOf="@+id/txtTitulo"
        app:layout_constraintStart_toStartOf="@+id/txtTitulo"
        app:layout_constraintTop_toTopOf="@+id/txtTitulo"
        tools:srcCompat="@drawable/logotipo" />

    <ImageView
        android:id="@+id/imgStock"
        android:layout_width="75dp"
        android:layout_height="77dp"
        android:layout_marginBottom="80dp"
        android:contentDescription="@string/imgstock"
        android:src="@drawable/stock"
        app:layout_constraintBottom_toBottomOf="@+id/btnStock"
        app:layout_constraintEnd_toEndOf="@+id/btnStock"
        app:layout_constraintStart_toStartOf="@+id/btnStock"
        app:layout_constraintTop_toTopOf="@+id/btnStock"
        app:srcCompat="@drawable/stock" />

    <ImageView
        android:id="@+id/imgInformes"
        android:layout_width="71dp"
        android:layout_height="79dp"
        android:layout_marginBottom="80dp"
        android:contentDescription="@string/imginformes"
        android:src="@drawable/informes"
        app:layout_constraintBottom_toBottomOf="@+id/btnInformes"
        app:layout_constraintEnd_toEndOf="@+id/btnInformes"
        app:layout_constraintStart_toStartOf="@+id/btnInformes"
        app:layout_constraintTop_toTopOf="@+id/btnInformes"
        tools:srcCompat="@drawable/informes" />

    <ImageView
        android:id="@+id/imgPedidos"
        android:layout_width="72dp"
        android:layout_height="66dp"
        android:layout_marginBottom="80dp"
        android:contentDescription="@string/imgpedidos"
        android:src="@drawable/pedido"
        app:layout_constraintBottom_toBottomOf="@+id/btnPedidos"
        app:layout_constraintEnd_toEndOf="@+id/btnPedidos"
        app:layout_constraintStart_toStartOf="@+id/btnPedidos"
        app:layout_constraintTop_toTopOf="@+id/btnPedidos"
        tools:srcCompat="@drawable/pedido" />

    <ImageView
        android:id="@+id/imgClientes"
        android:layout_width="78dp"
        android:layout_height="71dp"
        android:layout_marginBottom="80dp"
        android:src="@drawable/clientes"
        android:contentDescription="@string/imgclientes"
        app:layout_constraintBottom_toBottomOf="@+id/btnClientes"
        app:layout_constraintEnd_toEndOf="@+id/btnClientes"
        app:layout_constraintStart_toStartOf="@+id/btnClientes"
        app:layout_constraintTop_toTopOf="@+id/btnClientes" />

</androidx.constraintlayout.widget.ConstraintLayout>